--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-title: [The title of your site]
-description: [A short description of your site's purpose]
+title: Spacegram
+description: App where you can see the image of the day from NASA data
